feat: base pre auth
